@@ -14,6 +14,8 @@ Fixed Bugs:
 - Fixed some code generation overlays messing up the initial enabled state of certain 
   elements.
 - Fixed global constants missing from sanboxed Lua scripts.
+- Fixed race condition that prevented sceneManager.gotoScene() to transition to scenes
+  when called at the end of scripts.
 
 =================
 Version 1.3.0.0
